--- a/FrontEnd/Admin-Panel/src/Components/SidePanel/SidePanel.css
+++ b/FrontEnd/Admin-Panel/src/Components/SidePanel/SidePanel.css
@@ -8,6 +8,7 @@
   color: #000;
   display: flex;
   flex-direction: column;
+
   justify-content: space-between; /* Optional: Add some padding */
     position: fixed;
     top: 0;
@@ -18,9 +19,11 @@
   .website-name {
     font-weight: bold;
     margin-bottom: 10px;
-    margin-top: 10px;
-    margin-left: 5px;
+    margin-top: 20px;
+    margin-left: 10px;
+    font-size: x-large;
     text-align:justify;
+    color: white;
   }
   
   .buttons-section {
@@ -47,14 +50,27 @@
     width: 100%;
   }
 
+
   .custom-btn-color {
-    color: red; /* Change to your desired font color */
+    color: white; /* Change to your desired font color */
   }
   
   .custom-icon-color {
-    color: blue; /* Change to your desired icon color */
+    color: white; /* Change to your desired icon color */
+  }
+
+  .line{
+     color: white;
+  }
+
+  .custom-btn-color:hover{
+    color: black;
+    background-color: white;
   }
   
+  .custom-btn-color.selected {
+    color: black;
+    background-color: white;
+  }
 
-        
   
